# miamtrix

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bump-version.sh  create-gh-release.sh  docker-compose.dev.yml  docker-compose.yml  dockerfile  readme.md
.github/workflows/: build-ci.yml  release-ci.yml
migrations/2026-03-24-072132-0000_create_cron/: down.sql  up.sql
migrations/2026-04-01-135602-0000_add_cron_hour/: down.sql  up.sql
src/: config.rs  db.rs  main.rs  schema.rs
src/models/: cafeteria.rs  crons.rs  dish.rs  mod.rs  plat.rs
src/services/: controller.rs  help.rs  list.rs  menu.rs  mod.rs  oslf.rs  schedule.rs  yum.rs
src/utils/: api.rs  cache.rs  filter_menu.rs  message.rs  mod.rs
