[package]
name = "miamtrix"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/epfl-fsd/miamtrix"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenv = "0.15.0"
http = "1.4.0"
matrix-sdk = { version = "0.16.0", features = ["markdown"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
