[package]
name = "miamtrix"
version = "1.2.0"
edition = "2024"
repository = "https://github.com/epfl-fsd/miamtrix"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
cron_tab = { version = "0.2", features = ["sync", "async"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
http = "1.4.0"
matrix-sdk = { version = "0.16.0", features = ["markdown"] }
petname = "2.0.2"
regex = { version = "1"}
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
